fix spacing on location

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -743,6 +743,9 @@ ul {
 
 .run-schedule {
   margin-bottom: 0;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
 }
 
 .schedule-badge {
